Bring everything up to date
- bonsai v0.16
- add a nix flake for providing system deps on macOS, setup direnv
- start using opam lockfile so I won't be forced to upgrade again

--- a/bin/dune
+++ b/bin/dune
@@ -7,5 +7,5 @@
   twenty_forty_eight
   ppx_css.inline_css)
  (preprocess
-  (pps js_of_ocaml-ppx ppx_css ppx_jane))
+  (pps js_of_ocaml-ppx ppx_css ppx_jane bonsai.ppx_bonsai))
  (modes js))
