--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,12 @@ jobs:
     - uses: cachix/install-nix-action@v25
       with:
         github_access_token: ${{ secrets.GITHUB_TOKEN }}
-    - run: nix flake check
+    - run: |
+      nix develop
+      opam switch create . --deps-only --locked
+      dune build bin/main.bc.js
+    - uses: actions/upload-artifact@v4
+      with:
+        name: main.bc.js
+        path: _build/default/bin/main.bc.js
+
