--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,9 @@ env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 on:
-  pull_request:
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches:
+      - main
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -19,9 +18,5 @@ jobs:
     - name: Pull Vercel Environment Information
       run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
     - run: nix develop -c ci/build.sh
-    - uses: actions/upload-artifact@v4
-      with:
-        name: main.bc.js
-        path: _build/default/bin/main.bc.js
     - run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
 
